<resources>
    <string name="app_name">Poseidon App</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="success_msg">Success</string>
    <string name="soemthing_went_wrong">Somethong went wrong</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="start_shift">Start Day</string>
    <string name="number_of_projects">Number of Projects</string>
    <string name="applied_leaves">Applied Leaves</string>
    <string name="clock_in_out">Clock In/Out</string>
    <string name="office">Office</string>
    <string name="_32_heckel_stt_belleville_nj_07109">32 Heckel STt Belleville NJ 07109</string>
    <string name="request_detail">Request Detail</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="client_meeting">Client Meeting</string>
    <string name="today_client_is_visiting_in_our_office_to_discuss_about_the_new_work">Today client is visiting in our office to discuss about the new work</string>
    <string name="_25_10_2023_10_00_am">(25-10-2023, 10:00 AM)</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="enter_email_addresss">Enter email address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="internet_error">Please check internet connection</string>
    <string name="vacations">Vacations</string>
    <string name="submit">Submit</string>
    <string name="leave_type">Leave type</string>
    <string name="reason_for_leaves">Reason for leaves</string>
    <string name="project_name">Project Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal code</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="select_category">Select Category</string>
    <string name="price">Price</string>
    <string name="expense_requires_reimbursement">Expense requires reimbursement</string>
    <string name="ask_to_admin">Ask To Admin</string>
    <string name="subject">Subject</string>
    <string name="notes">Notes</string>
    <string name="were_you_injured_while_worked">Were you injured while worked?</string>
    <string name="injury_explaination">Injury Explaination</string>
    <string name="session_expire_please_relogin">Session Expire, Please Relogin</string>
    <string name="poseidon">Poseidon</string>
    <string name="are_you_sure_to_logout">Are you sure to logout?</string>
    <string name="_30">30</string>
    <string name="_12">12</string>
    <string name="_09_57">00:00</string>
    <string name="john_smith">John Smith</string>
    <string name="select">Select</string>
    <string name="contractor_name">Contractor Name</string>
    <string name="_0_miles">0 Miles</string>
    <string name="calendar_sunday">Sun</string>
    <string name="calendar_monday">Mon</string>
    <string name="calendar_tuesday">Tue</string>
    <string name="calendar_wednesday">Wed</string>
    <string name="calendar_thursday">Thu</string>
    <string name="calendar_friday">Fri</string>
    <string name="calendar_saturday" translatable="false">Sat</string>
    <string name="schedule_calendar" translatable="false">Schedule Calendar</string>
    <string name="fill_timesheet_completely" translatable="false">Kindly fill the timesheet completely</string>
    <string name="total_materials">TOTAL MATERIALS</string>
    <string name="qty">QTY</string>
    <string name="material">MATERIAL</string>
    <string name="add_sign">Add Sign</string>
    <string name="signature">Signature</string>
    <string name="work_order_by">Work order by</string>
    <string name="add_labor">Add Labor</string>
    <string name="job_invoice">JOB INVOICE</string>
    <string name="order_taken_by">Order taken by</string>
    <string name="customer_s_order_number">Customer\'s order number</string>
    <string name="date_of_order">Date of order</string>
    <string name="phone">Phone Number</string>
    <string name="job_name_number">Job (Name / Number)</string>
    <string name="job_location">Job location</string>
    <string name="job_phone">Job phone</string>
    <string name="starting_date">Starting date</string>
    <string name="day_work">Day work</string>
    <string name="contract">Contract</string>
    <string name="extra">Extra</string>
    <string name="description_of_work">DESCRIPTION OF WORK</string>
    <string name="other_charges">OTHER CHARGES</string>
    <string name="labor_charges">LABOR CHARGES</string>
    <string name="reset">RESET</string>
    <string name="add_service">Add Service</string>
    <string name="gross_total">GROSS TOTAL</string>
    <string name="description_gross_total">Price include other charges and total labor cost respective to number of workers</string>
    <string name="welcome">Welcome</string>
    <string name="To">Customer Name</string>
    <string name="Terms">Terms</string>
    <string name="SIZE">SIZE</string>
    <string name="AddMaterial">Add Material</string>
    <string name="HRS">HRS</string>
    <string name="LABOR">LABOR</string>
    <string name="RATE">RATE</string>
    <string name="AMOUNT">AMOUNT</string>
    <string name="TOTALAMOUNT">TOTAL AMOUNT</string>
    <string name="Num_of_workers">Number of workers required</string>
    <string name="SERVICE">SERVICE</string>
    <string name="Fire_sprinkler_system">Fire sprinkler system</string>
    <string name="Description">Description</string>
    <string name="SIGNATURE">SIGNATURE</string>
    <string name="Back">Back</string>
    <string name="Contract">Contract</string>
    <string name="Extra">Extra</string>
    <string name="Please_add_description">Please add description</string>
    <string name="cpvc_pipe">CPVC Pipe</string>
    <string name="steel_pipe">Steel Pipe</string>
    <string name="cpvc_fitting">CPVC Fitting</string>
    <string name="steel_fitting">Steel Fitting</string>
    <string name="s_r_head">S.R. Head</string>
    <string name="con_head">CON. Head</string>
    <string name="dry_head">Dry Head</string>
    <string name="valves">Valves</string>
    <string name="zero_point_five_in">0.5in</string>
    <string name="zero_point_seventyfive_in">0.75in</string>
    <string name="one_inch">1in</string>
    <string name="one_point_tewenty_five_in">1.25in</string>
    <string name="one_point_fifty_in">1.50in</string>
    <string name="two_in">2in</string>
    <string name="two_point_five_in">2.5in</string>
    <string name="three_in">3in</string>
    <string name="four_in">4in</string>
    <string name="six_in">6in</string>
    <string name="eight_in">8in</string>
    <string name="regular">Regular</string>
    <string name="overtime">Overtime</string>
    <string name="double_time">Double time</string>
    <string name="ny_prevailing">NY Prevailing</string>
    <string name="left_in_service">left in service</string>
    <string name="left_offand_out_of_service">left off and out of service</string>
    <string name="please_add_description">Please add description</string>
    <string name="please_provide_all_parameters">Please provide all parameters</string>
    <string name="add_order_taken_by_field">Add order taken by field</string>
    <string name="enter_customer_order_number">Enter customer order number</string>
    <string name="enter_date_of_order">Enter date of order</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_valid_phone_number">Enter valid phone number</string>
    <string name="enter_job_name">Enter job name</string>
    <string name="enter_job_location">Enter job location</string>
    <string name="enter_job_phone">Enter job phone</string>
    <string name="enter_valid_job_phone_number">Enter valid job phone number</string>
    <string name="enter_stating_date">Enter starting date</string>
    <string name="enter_description_of_work">Enter description of work</string>
    <string name="add_material">Add material</string>
    <string name="enter_the_work_order_by_person_name">Enter the work order by person name</string>
    <string name="enter_the_number_of_workers_required">Enter the Number of workers required</string>
    <string name="add_signature">Add signature</string>
    <string name="enter_other_charge_amount">Enter other charges amount</string>
    <string name="enter_other_charges_title">Enter other charges title</string>
    <string name="this_is_not_the_final_price">(This is not final price)</string>
    <string name="work_order">WORK ORDER</string>
    <string name="work_type">Work type :  </string>
    <string name="material_detail">Materials detail :  </string>
    <string name="please_add_signature">Please add signature</string>
    <string name="item_was_removed_from_the_list">Item was removed from the list.</string>
    <string name="fire_sprinkler_system">Fire sprinkler system </string>
    <string name="any_system_that_cannot_be">Any system that cannot be returned to active service in the </string>
    <string name="same_buisness_day_will_require">same business day will require fire watch to be scheduled </string>
    <string name="and_provided_by_the_building">and provided by the building representative, maintenance </string>
    <string name="company_and_or_building_order">company and or building owner. All CPVC systems that are </string>
    <string name="cut_into_will_be_left">cut into WILL be left off for a 24 hour period for proper glue </string>
    <string name="cure_time">cure time </string>
    <string name="number_of_workers_required">Number of workers required </string>
    <string name="our_labor_rates_are_as_follows">Our Labor rates are as follows: </string>
    <string name="straight_time_m">Straight Time M-F 7:00AM-3:30PM is 2 men 4 hr minimum.</string>
    <string name="_per_hr_per_man">$110 per hr per man, $85 flat rate for travel, material, plus tax.</string>
    <string name="anything_over_the_hrs_is">Anything over the 4 hrs is additional.\n\n</string>
    <string name="overtime_mf_pm">Overtime M-F 3:31PM - 6:59AM. Saturday to 11:59PM is 2 men 4 hr minimum.</string>
    <string name="per_hr_per_man_total">$162.50 per hr per man total is $1,300.00, $85 flat rate for travel, material, plus tax.</string>
    <string name="anything_over_the_hrs_is_">Anything over the 4 hrs is additional. </string>
    <string name="double_time_sunday_">Double Time Sunday 12:01AM-11:59 PMis 2 men 4 hr minimum. </string>
    <string name="per_hr_each_total_">$220 per hr each total is $1,760.00, $85 flat rate for travel, material, plus tax. </string>
    <string name="anyting_over_the_hrs_is_">Anything over the 4 hrs is additional. </string>
    <string name="are_you_sure_you_want_to_reset_the_fields">Are you sure you want to reset all fields?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="size">SIZE</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="home" translatable="false">Home</string>
    <string name="requests_listings" translatable="false">Requests Listings</string>
    <string name="quarterly">Quarterly</string>
    <string name="test">Test</string>
    <string name="date_example">2024-02-01 12:32 PM</string>
    <string name="dummy_location">Test1,NY,Surrey</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="name">Name</string>
    <string name="system_name">System Name</string>
    <string name="system_location">System Location</string>
    <string name="add_system_id_">Add system id</string>
</resources>