<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4sdp"
        android:background="@drawable/rectshape_clockin_out_blue"
        android:orientation="vertical"
        android:padding="@dimen/_15ssp"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/client_meeting"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/messagetTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/today_client_is_visiting_in_our_office_to_discuss_about_the_new_work"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_25_10_2023_10_00_am"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvAccept"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/rect_shape_white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/accept"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8ssp" />

                <TextView
                    android:id="@+id/tvReject"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="@dimen/_5sdp"
                    android:background="@drawable/rect_shape_white"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/reject"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_8ssp" />


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</layout>

