<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_5sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@color/viewline_grey"
    app:cardCornerRadius="@dimen/_13sdp"
    card_view:cardElevation="@dimen/_3sdp"
    card_view:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/choose_image"
            android:textColor="@color/grey"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/viewline_grey" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/camera"
            android:textColor="@color/line_blue"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/viewline_grey" />

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/gallery"
            android:textColor="@color/line_blue"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/viewline_grey" />

        <TextView
            android:id="@+id/tvCancelImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancel"
            android:textColor="@color/line_blue"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


</androidx.cardview.widget.CardView>




