<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        card_view:cardElevation="@dimen/_2sdp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/_10sdp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivUser"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_placeholder" />

            <LinearLayout
                android:id="@+id/llData"
                android:layout_toEndOf="@+id/ivUser"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/quarterly"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/test"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/date_example"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/_2sdp"
                    android:drawableLeft="@drawable/ic_location"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/dummy_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>

