<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_4sdp"
        android:orientation="horizontal"
        android:background="@drawable/rectshape_clockin_out_blue"
        android:padding="@dimen/_15ssp"
        android:paddingHorizontal="@dimen/_10sdp">

        <LinearLayout
            android:id="@+id/llData"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/office"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/messagetTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_32_heckel_stt_belleville_nj_07109"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5"
            android:gravity="end"
            android:layout_gravity="end">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/punchSwitch"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:checked="false"
                android:thumb="@drawable/thumb_selector"
                app:track="@drawable/track_selector" />

            <TextView
                android:id="@+id/distanceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/_9sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/_0_miles"/>

        </LinearLayout>
    </LinearLayout>

</layout>

