<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginVertical="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        card_view:cardElevation="@dimen/_2sdp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="@dimen/_10sdp">

            <LinearLayout
                android:id="@+id/llData"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvaddSystem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/add_system_id_"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    card_view:ignore="HardcodedText" />
                <TextView
                    android:id="@+id/tvSystemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/system_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
                <TextView
                    android:id="@+id/tvsystemLoction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/system_location"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</layout>

