<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:elevation="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_9sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/alert"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/session_expire_please_relogin"
                    android:textColor="@color/Black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tvOk"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/save_btn_shape"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|center_vertical"
                    android:paddingVertical="@dimen/_5sdp"
                    android:paddingHorizontal="@dimen/_20sdp"
                    android:text="@string/ok"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14sdp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.cardview.widget.CardView>

